[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Scripts/Actors/Enemies/Enemy3.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheets/enemy-big.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 7 )

[node name="Enemy3" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 9 )
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.19209e-07, 1 )
scale = Vector2( 1.3, 1.5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.5, 27 )
scale = Vector2( 1.35, 0.3 )
physics_process_parent = true

[node name="BulletSpawner" type="Position2D" parent="."]
position = Vector2( 0, 9 )

[node name="LineTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="FlowerTimer" type="Timer" parent="."]
autostart = true

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="timeout" from="LineTimer" to="." method="_on_LineTimer_timeout"]
[connection signal="timeout" from="FlowerTimer" to="." method="_on_FlowerTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
